<resources>
    <string name="app_name">BottomNavigationBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_filmes">Lista Filmes</string>
    <string name="notifications">Notifications</string>
    <string name="create_pub">Create Pub</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>