<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mHome"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home" />
    <item
        android:id="@+id/mSearch"
        android:icon="@drawable/baseline_search"
        android:title="@string/search" />
    <item
        android:id="@+id/mCreate"
        android:icon="@drawable/baseline_add_box"
        android:title="@string/create_pub" />
    <item
        android:id="@+id/mNotifications"
        android:icon="@drawable/baseline_favorite"
        android:title="@string/notifications" />
    <item
        android:id="@+id/mProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />


</menu>

